--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "fakerphp/faker": "^1.15",
         "knplabs/knp-time-bundle": "^1.16",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "phpmailer/phpmailer": "^6.5",
         "sensio/framework-extra-bundle": "^6.1",
+        "swiftmailer/swiftmailer": "^6.2",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
@@ -37,6 +39,7 @@
         "symfony/security-bundle": "5.3.*",
         "symfony/serializer": "5.3.*",
         "symfony/string": "5.3.*",
+        "symfony/swiftmailer-bundle": "^3.5",
         "symfony/translation": "5.3.*",
         "symfony/twig-bundle": "^5.3",
         "symfony/validator": "5.3.*",
