--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fakerphp/faker": "^1.15",
         "knplabs/knp-paginator-bundle": "^5.6",
         "knplabs/knp-time-bundle": "^1.16",
+        "mailjet/mailjet-apiv3-php": "^1.5",
         "phpdocumentor/reflection-docblock": "^5.2",
         "phpmailer/phpmailer": "^6.5",
         "sensio/framework-extra-bundle": "^6.1",
