--- a/.env
+++ b/.env
@@ -27,9 +27,10 @@ MAILER_DSN=smtp://localhost:1025
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-#mysql-conde.alwaysdata.net bd conde_annonce vsbd=10.5.11-MariaDB
-DATABASE_URL="mysql://conde:Kissosso2020.@mysql-conde.alwaysdata.net:3306/conde_annonce?serverVersion=10.5.11-MariaDB"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/sabbah?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/conde_annonce?serverVersion=13&charset=utf8"
+
+# DATABASE_URL="mysql://conde:nane@mysql-conde.alwaysdata.net:3306/conde_annonce?serverVersion=10.5.11-MariaDB"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
